user proto update
