# api-gateway/main.go
@@ -8,6 +8,7 @@ import (
 	"os"
 
 	"github.com/iamvasanth07/showcase/api-gateway/config"
+	usrConfig "github.com/iamvasanth07/showcase/user/config"
 	userSvc "github.com/iamvasanth07/showcase/user/service"
 )
 
@@ -17,12 +18,16 @@ func main() {
 
 	logger := log.New(os.Stdout, "api-gateway", log.LstdFlags)
 
+	usrSettings := usrConfig.GetSettings()
+
+	logger.Println("user settings loaded: ", usrSettings.Database.Host, usrSettings.Database.Port, usrSettings.Database.User, usrSettings.Database.Password, usrSettings.Database.Name)
+
 	// get user service http handler
 	userHandler := userSvc.GetHTTPHandler()
 
 	// create a new serve mux and register handlers
 	mux := http.NewServeMux()
-	mux.Handle("/user/", userHandler)
+	mux.Handle("/api/v1/user", userHandler)
 
 	lis, err := net.Listen("tcp", fmt.Sprintf("%s:%s", settings.Server.HTTPHost, settings.Server.HTTPPort))
 	if err != nil {
